--- a/0x00-html_advanced/25-index.html
+++ b/0x00-html_advanced/25-index.html
@@ -195,4 +195,33 @@
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
                     </div>
 
+                    <a href="contact.html">Get in Touch</a>
 
+                </div>
+            </section>
+
+        </main>
+
+        <!-- ==================== Footer ==================== -->
+        <footer>
+
+            <div>
+                <ul>
+                    <li><a href="https://www.facebook.com/HolbertonSchool/">Facebook</a></li>
+                    <li><a href="https://twitter.com/holbertonschool">Twitter</a></li>
+                    <li><a href="https://www.instagram.com/holbertonschool/">Instagram</a></li>
+                </ul>
+            </div>
+
+            <div>
+                <ul>
+                    <li><a href="#">Terms of Use</a></li>
+                    <li><a href="#">Privacy Policy</a></li>
+                    <li><a href="#">Cookie Policy</a></li>
+                </ul>
+            </div>
+            
+        </footer>
+
+    </body>
+</html>
